url-shortner stateful-auth

--- a/url-shortener/views/home.ejs
+++ b/url-shortener/views/home.ejs
@@ -29,7 +29,7 @@
         </div>
 
         <div>
-            <% if (locals.urls) { %>
+            <% if (locals.urls  && urls.length > 0) { %>
                 <table class="w-full border-collapse">
                     <thead class="text-white">
                         <th> S. No </th>
