blog-app blog-comments route-protection

--- a/blog-app/views/partials/navbar.ejs
+++ b/blog-app/views/partials/navbar.ejs
@@ -22,7 +22,7 @@
                 </button>
                 
                 <div class="absolute right-0 w-48 mt-0 origin-top-right bg-white rounded-md shadow-lg py-1 ring-1 ring-black ring-opacity-5 hidden group-hover:block transition-all">
-                  <a href="/user/logout" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Logout</a>
+                  <a href="/user/signout" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Logout</a>
                 </div>
               </div>
 
